백엔드에서 로그인 기능 구현

--- a/app/package.json
+++ b/app/package.json
@@ -1,17 +1,17 @@
 {
   "dependencies": {
+    "body-parser": "^1.19.2",
     "ejs": "^3.1.6",
     "express": "^4.17.3"
   },
   "name": "login-lecture3",
   "version": "1.0.0",
   "main": "app.js",
-  "bin": { 
+  "bin": {
     "login-lecture3": "bin/www.js"
   },
-  "devDependencies": {},
   "scripts": {
-    "start":"nodemon ./bin/www.js",
+    "start": "nodemon ./bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -20,6 +20,6 @@
   "homepage": "",
   "repository": {
     "type": "git",
-    "url":""
+    "url": ""
   }
 }
